<resources>
    <string name="app_name">DFS</string>
    <string name="image_description">this is a product image</string>
    <string name="product_description">this is a product name</string>
    <string name="share">Share</string>
    <string name ="removeFromFavorite">Remove From Favorite</string>
    <string name="title_action_setting">Settings</string>
    <string name ="location">keyLocation</string>
    <string name ="title_location">Set Your Current Location</string>
    <string name ="default_location">US</string>
    <string name="empty">List is Empty</string>
    <string name="Setting_name">Settings</string>
    <string name="Site_name">This is site name</string>
    <string name="title_description">This is title of a selected product</string>
    <string name="fab_description">This is Favourite</string>
    <string name="description">description of product</string>
    <string name="currency"> Currency</string>
    <string name="offer_price"> Offer price</string>
    <string name="price"> Actual price</string>
    <string name="date"> Product last change date</string>
    <string name="RemoveFromfab">Remove from favourite....</string>
    <string name="Addedasfab">Mark as favourite....</string>
    <string name="NoInternet">No Internet Access.. Plz turn on your internet and restart app !!!</string>

    <string name="txtprice">Price</string>
    <string name="txtpriceoffer">Offer Price</string>



</resources>
