<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:fitsSystemWindows="true"
    >
    <android.support.design.widget.AppBarLayout
        android:id="@+id/main_appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbar_layout_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true"
        >

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/main_Collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="@dimen/margin_start"
            app:expandedTitleMarginEnd="@dimen/margin_end"
            >

            <ImageView
                android:id="@+id/main_backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                android:src="@drawable/sale_default"
                app:layout_collapseMode="parallax"
                android:contentDescription="@string/image_description"
                />

            <android.support.v7.widget.Toolbar
                android:id="@+id/main_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"
                />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <android.support.v7.widget.CardView
            android:id="@+id/cardView_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin_top"
            android:paddingTop="@dimen/paddingtop" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_top"
                >
              <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/title"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                  android:contentDescription="@string/title_description"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/layout_margin"

                >
                <TextView
                    android:id="@+id/site_name"
                    android:layout_width="@dimen/layout_width"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:fontFamily="sans-serif-condensed"
                    android:contentDescription="@string/Site_name"

                    />
                <TextView
                    android:id="@+id/date"
                    android:layout_width="@dimen/layout_width"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:fontFamily="sans-serif-condensed"
                    android:contentDescription="@string/date"/>

            </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/layout_margin"
                    android:layout_marginBottom="@dimen/layout_margin"

                    >
                    <TextView
                        android:id="@+id/price_text"
                        android:text = "Price"
                        android:layout_width="@dimen/layout_width"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:fontFamily="sans-serif"
                        android:textStyle="normal|bold" />
                    <TextView
                        android:id="@+id/price"
                        android:text ="Price Value"
                        android:layout_width="@dimen/layout_width"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:fontFamily="sans-serif"
                        android:contentDescription="@string/price"

                        />
                    <TextView
                        android:id="@+id/currency"
                        android:text ="currency"
                        android:layout_width="@dimen/layout_width"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:fontFamily="sans-serif"
                        android:contentDescription="@string/currency"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/layout_margin"
                    android:layout_marginBottom="@dimen/layout_margin"

                    >
                    <TextView
                        android:text = "Offer Price"
                        android:layout_width="@dimen/layout_width"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:fontFamily="sans-serif"

                        android:textStyle="normal|bold" />
                    <TextView
                        android:id="@+id/price_offer"
                        android:text ="Price Value"
                        android:layout_width="@dimen/layout_width"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:fontFamily="sans-serif"
                        android:contentDescription="@string/offer_price"

                        />
                    <TextView
                        android:id="@+id/currency_offer"
                        android:text ="currency"
                        android:layout_width="@dimen/layout_width"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:fontFamily="sans-serif"
                        android:contentDescription="@string/currency"/>

                </LinearLayout>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/cardview_dark_background"
            android:contentDescription="@string/description"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_favorite_white_border"
        app:layout_anchor="@id/main_appbar"
        app:layout_anchorGravity="bottom|right|end"
        android:contentDescription="@string/fab_description"/>
        />
</android.support.design.widget.CoordinatorLayout>